fix alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -840,7 +840,7 @@
       position: relative;
 
       .inner {
-        padding: 80px 10%;
+        padding: 20% 15%;
         margin: auto;
         position: absolute;
         top: 0;
